# lazyi18n

./: .gitignore  CHECKLIST.md  LAZYVIM_SETUP.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v3.0.md  STATUS.txt  lazyi18n.sh  main.py  main_v2.py  nvim-plugin-lazyi18n.lua  pyproject.toml  pytest.ini  quickstart.py  requirements.txt  setup.py  test_core.py
.github/workflows/: ci.yml  nightly.yml  publish.yml
core/: __init__.py  analyzer.py  config.py  flatten.py  llm.py  loader.py  project.py  translator.py  writer.py
examples/: de.json  en.json
tests/: conftest.py  test_analyzer.py  test_flatten.py  test_loader.py  test_project.py  test_writer.py
ui/: __init__.py  app.py  panes.py  screens.py  styles.py
