[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyi18n"
version = "0.1.1"
description = "A TUI for managing i18next translation files"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT License"}
authors = [
  {name = "Tade Strehk"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "platformdirs>=4.5.1",
    "Pygments>=2.19.2",
    "rich>=14.2.0",
    "textual>=6.10.0",
    "typing_extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[project.scripts]
lazyi18n = "main:main"

[project.urls]
Homepage = "https://github.com/strehk/lazyi18n"

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "ui"]
